--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
 <p> Home Page</p>
 <p th:text="${userData}"></p>
 
-<form action="/kkkk"  method="get" >
+<form action="/kkkk" method="get">
     <button type="submit"> submit</button>
 </form>
 
@@ -27,5 +27,13 @@
         </div>
     </div>
 </div>
+
+<div th:each="oneMessage: ${messages}">
+    <div>
+        <h2 th:text="${oneMessage.getBody()}"></h2>
+        <h2 th:text="${oneMessage.getSender()}"></h2>
+    </div>
+</div>
+
 </body>
 </html>
