--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,31 +11,31 @@
 
 
 
-<!--<form action="/signup"  method="post" >-->
+<form action="/signup"  method="post" >
 
-<!--    <label for="username">User Name</label>-->
-<!--    <input id="username" name="username" type="text" />-->
-<!--    <br/>-->
-<!--    <label for="password">Password</label>-->
-<!--    <input id="password" name="password" type="password" />-->
-<!--    <br/>-->
-<!--    <label for="firstname">First Name</label>-->
-<!--    <input id="firstname" name="firstname" type="text" />-->
-<!--    <br/>-->
-<!--    <label for="lastname">Last Name</label>-->
-<!--    <input id="lastname" name="lastname" type="text" />-->
-<!--    <br/>-->
-<!--    <label for="dateOfBirth">Date Of Birth</label>-->
-<!--    <input id="dateOfBirth" name="dateOfBirth" type="date" max="2005-01-01" />-->
-<!--    <br/>-->
-<!--    <label for="country">country</label>-->
-<!--    <input id="country" name="country" type="text" />-->
-<!--    <br/>-->
-<!--&lt;!&ndash;    <label for="image">image</label>&ndash;&gt;-->
-<!--    <input id="image" name="image" type="hidden" value="xyz"/>-->
+    <label for="username">User Name</label>
+    <input id="username" name="username" type="text" />
+    <br/>
+    <label for="password">Password</label>
+    <input id="password" name="password" type="password" />
+    <br/>
+    <label for="firstname">First Name</label>
+    <input id="firstname" name="firstname" type="text" />
+    <br/>
+    <label for="lastname">Last Name</label>
+    <input id="lastname" name="lastname" type="text" />
+    <br/>
+    <label for="dateOfBirth">Date Of Birth</label>
+    <input id="dateOfBirth" name="dateOfBirth" type="date" max="2005-01-01" />
+    <br/>
+    <label for="country">country</label>
+    <input id="country" name="country" type="text" />
+    <br/>
+<!--    <label for="image">image</label>-->
+    <input id="image" name="image" type="hidden" value="xyz"/>
 
-<!--    <button type="submit">Sign up</button>-->
-<!--</form>-->
+    <button type="submit">Sign up</button>
+</form>
 
 
 
