--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,10 +28,10 @@
     </div>
 </div>
 
-<div th:each="oneMessage: ${messages}">
+<div th:each="oneMessage: ${chat}">
     <div>
         <h2 th:text="${oneMessage.getBody()}"></h2>
-        <h2 th:text="${oneMessage.getSender()}"></h2>
+        <h2 th:text="${oneMessage.getSender().getUsername()}"></h2>
     </div>
 </div>
 
