fix edit profile

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -7,10 +7,9 @@
 <body>
 <header th:fragment="header">
     <a href="/signup">Sign Up</a>
-    <a href="/login">Sign In</a>
+    <a href="/login">Log In</a>
     <a href="/">Home</a>
     <a href="/myProfile">Profile</a>
-    <a href="/myProfile">All </a>
 </header>
 </body>
 </html>
