--- a/src/main/resources/templates/oneConsultation.html
+++ b/src/main/resources/templates/oneConsultation.html
@@ -10,6 +10,27 @@
     <h2 th:text="${oneConsultation.getBody()}"></h2>
 </div>
 
+<!--getResponses()-->
+    <div>
+        <div th:if="${oneConsultation.isTaken()}">
+<!--            <form th:if="${applicationUser}"-->
+<!--                  th:action="@{/DeleteOneConsultation/{id}(id=${oneConsultation.getId()})}"-->
+<!--                  method="post">-->
+<!--                <button type="submit">Delete</button>-->
+<!--            </form>-->
+        </div>
+        <div th:unless="${oneConsultation.isTaken()}">
+            <h2 th:text="${oneConsultation.getBody()}"></h2>
+            <a th:href="@{/showOneConsultation/{id}(id=${oneConsultation.getId()})}">Show Full Conversation</a>
+            <form th:if="${applicationUser}"
+                  th:action="@{/DeleteOneConsultation/{id}(id=${oneConsultation.getId()})}"
+                  method="post">
+                <button type="submit">Delete</button>
+            </form>
+        </div>
+    </div>
+
+
 <!--Add Response-->
 <form action="/addResponse" method="post">
     <input type="hidden" field="*{consultationId}" name="consultationId" th:value="${oneConsultation.getId()}">
