--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -10,6 +10,7 @@
     <a href="/login">Log In</a>
     <a href="/">Home</a>
     <a href="/myProfile">Profile</a>
+    <a href="/allTherapists">Therapists</a>
 </header>
 </body>
 </html>
