--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<header th:replace="fragment :: header"></header>
 <h1>Log In Form</h1>
 <div>
   <form action="/perform_login" method="post" >
