--- a/src/main/resources/templates/myProfile.html
+++ b/src/main/resources/templates/myProfile.html
@@ -31,6 +31,7 @@
 
     <!--render consultation "pending or taken(with button add response)" both with delete -->
     <div th:each="oneConsultation: ${Consultations}">
+
         <div th:if="${oneConsultation.isTaken()}">
             <h2 th:text="${oneConsultation.getBody()}"></h2>
             <a th:href="@{/showOneConsultation/{id}(id=${oneConsultation.getId()})}">Show Full Conversation</a>
@@ -40,13 +41,18 @@
                 <button type="submit">Delete</button>
             </form>
         </div>
+
         <div th:unless="${oneConsultation.isTaken()}">
             <h2 th:text="${oneConsultation.getBody()}"></h2>
-            <a th:href="@{/showOneConsultation/{id}(id=${oneConsultation.getId()})}">Show Full Conversation</a>
             <form th:if="${applicationUser}"
                   th:action="@{/DeleteOneConsultation/{id}(id=${oneConsultation.getId()})}"
                   method="post">
                 <button type="submit">Delete</button>
+            </form>
+            <form th:unless="${applicationUser}"
+                  th:action="@{/responseConsultation/{id}(id=${oneConsultation.getId()})}"
+                  method="get">
+                <button type="submit">Response Consultation</button>
             </form>
         </div>
     </div>
@@ -63,7 +69,7 @@
             <input type="text" name="country" placeholder="country" required>
             <input type="submit" name="submit" placeholder="submit" required>
         </form>
-        <form  th:unless="${applicationUser}" th:action="@{/editProfile}" method="get">
+        <form th:unless="${applicationUser}" th:action="@{/editProfile}" method="get">
             <input type="text" name="firstname" placeholder="firstname" required>
             <input type="text" name="lastname" placeholder="lastname" required>
             <input type="date" name="dateOfBirth" placeholder="dateOfBirth" required>
