finished chat feature

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -31,7 +31,7 @@
     <input id="country" name="country" type="text" />
     <br/>
 <!--    <label for="image">image</label>-->
-    <input id="image" name="image" type="hidden" value="xyz"/>
+    <input id="image" name="image" type="text"/>
 
     <button type="submit">Sign up</button>
 </form>
