--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -11,6 +11,8 @@
     <a href="/">Home</a>
     <a href="/myProfile">Profile</a>
     <a href="/allTherapists">Therapists</a>
+    <a href="/getMessages">Index</a>
+    <a href="/sendMessage">sendMessage</a>
 </header>
 </body>
 </html>
