--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -19,7 +19,7 @@ body,html{
 		.card{
 			height: 500px;
 			border-radius: 15px !important;
-			background-color: rgba(0,0,0,0.4) !important;
+			background-color: rgb(255 255 255) !important;
 		}
 		.contacts_body{
 			padding:  0.75rem 0 !important;
@@ -32,34 +32,41 @@ body,html{
 		.card-header{
 			border-radius: 15px 15px 0 0 !important;
 			border-bottom: 0 !important;
+			background-color:#ffffff !important;
 		}
 	 .card-footer{
 		border-radius: 0 0 15px 15px !important;
 			border-top: 0 !important;
+			background-color:#ffffff !important;
 	}
 		.container{
 			align-content: center;
 		}
 		.search{
 			border-radius: 15px !important;
-			background-color: rgba(0,0,0,0.3) !important;
+			background-color: rgb(247 247 247) !important;
+			background-color:#ffffff !important;
 			border:0 !important;
-			color:white !important;
+			color:#82ccdd !important;
+
 		}
 		.search:focus{
 		     box-shadow:none !important;
+background-color:#ffffff !important;
            outline:0px !important;
 		}
 		.type_msg{
-			background-color: rgba(0,0,0,0.3) !important;
+			background-color: rgb(152 152 152 / 19%) !important;
 			border:0 !important;
-			color:white !important;
+			border-radius: 15px 0 0 15px !important;
+			color:#6c7880 !important;
 			height: 60px !important;
 			overflow-y: auto;
 		}
 			.type_msg:focus{
 		     box-shadow:none !important;
            outline:0px !important;
+
 		}
 		.attach_btn{
 	border-radius: 15px 0 0 15px !important;
@@ -70,7 +77,7 @@ body,html{
 		}
 		.send_btn{
 	border-radius: 0 15px 15px 0 !important;
-	background-color: rgba(0,0,0,0.3) !important;
+	background-color: rgb(230 230 230) !important;
 			border:0 !important;
 			color: white !important;
 			cursor: pointer;
@@ -92,7 +99,7 @@ body,html{
 			margin-bottom: 15px !important;
 		}
 	.active{
-			background-color: rgba(0,0,0,0.3);
+			background-color: rgb(135 210 215 / 0%);
 	}
 		.user_img{
 			height: 70px;
@@ -135,11 +142,11 @@ body,html{
 	}
 	.user_info span{
 		font-size: 20px;
-		color: white;
+		color: #82ccdd;
 	}
 	.user_info p{
 	font-size: 10px;
-	color: rgba(255,255,255,0.6);
+	color: rgb(119 98 98);
 	}
 	.video_cam{
 		margin-left: 50px;
@@ -156,7 +163,8 @@ body,html{
 		margin-bottom: auto;
 		margin-left: 10px;
 		border-radius: 25px;
-		background-color: #82ccdd;
+		background-color: #48bdc5;
+		color:#ffffff;
 		padding: 10px;
 		position: relative;
 		    min-width: 150px;
@@ -166,7 +174,8 @@ body,html{
 		margin-bottom: auto;
 		margin-right: 10px;
 		border-radius: 25px;
-		background-color: #78e08f;
+		background-color: #8e8e8e;
+		color:#ffffff;
 		padding: 10px;
 		position: relative;
 				    min-width: 150px;
@@ -175,15 +184,15 @@ body,html{
 	.msg_time{
 		position: absolute;
 		left: 0;
-		bottom: -15px;
-		color: rgba(255,255,255,0.5);
+		bottom: -22px;
+		color: rgb(130 130 130);
 		font-size: 10px;
 	}
 	.msg_time_send{
 		position: absolute;
 		right:0;
-		bottom: -15px;
-		color: rgba(255,255,255,0.5);
+		bottom: -22px;
+		color: rgb(130 130 130);
 		font-size: 10px;
 	}
 	.msg_head{
